# chatgpt-to-claude-mcp

./: .gitignore  LICENSE  README.md  extract.py  pyproject.toml  scrape.py
.github/workflows/: publish.yml
src/chatgpt_to_claude_mcp/: extract.py  scrape.py  server.py
tests/: test_server.py
